--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -1,4 +1,4 @@
-<div class="app-home__head mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+<div class="app-head mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div show-profile user="user" class="app-profile">
         <div class="app__pull-left">
             <img class="app-profile__image" src="//graph.facebook.com/{{ user.uid }}/picture">
