--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -1,8 +1,31 @@
-<div class="app-home__head mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+<div class="app-head mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div profile-game player="player2"></div>
 </div>
 
-<div class="app-home__head mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+<div class="app-game__content app-element mdl-shadow--2dp mdl-cell mdl-cell--10-col mdl-cell--12-col-tablet" 
+     ng-class="{'app-game--white': orientation == 'white', 'app-game--black': orientation == 'black'}">
+    <div ng-repeat="number in numbers" class="app-game__content-row">
+        <div 
+            ng-repeat="letter in letters" 
+            ng-init="position = letter + number" 
+            ng-class="isLastTurn(position)" 
+            id="{{position}}" 
+            class="app-game__content-box">
+            <span class="app-game__icon" ng-class="getPieceClass(position)" piece-draggable data-position="{{position}}"></span>
+        </div>
+    </div>
+</div>
+
+<div class="app-game__notation app-element mdl-shadow--2dp mdl-cell mdl-cell--2-col mdl-cell--12-col-tablet">
+    <div class="app-element">
+        <div ng-repeat="notation in player1.notation track by $index">{{ notation }}</div>
+    </div>
+    <div class="app-element">
+        <div ng-repeat="notation in player2.notation track by $index">{{ notation }}</div>
+    </div>
+</div>
+
+<div class="app-head mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div profile-game player="player1"></div>
 </div>
 
