--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -30,13 +30,13 @@
                     <div class="app-modal__actions">
                         <button modal-close 
                                 type="reset" 
-                                class="mdl-button mdl-button--raised close">
+                                class="mdl-button mdl-button--raised">
                                 {{ 'cancel'|translate }}
                         </button>
                         <button modal-close 
                                 ng-click="offerDraw()"
                                 type="button" 
-                                class="mdl-button mdl-button--raised mdl-button--colored close">
+                                class="mdl-button mdl-button--raised mdl-button--colored">
                                 {{ 'ok'|translate }}
                         </button>
                     </div>
@@ -54,13 +54,13 @@
                     <div class="app-modal__actions">
                         <button modal-close 
                                 type="reset" 
-                                class="mdl-button mdl-button--raised close">
+                                class="mdl-button mdl-button--raised">
                                 {{ 'cancel'|translate }}
                         </button>
                         <button modal-close 
                                 ng-click="resign()" 
                                 type="button" 
-                                class="mdl-button mdl-button--raised mdl-button--colored close">
+                                class="mdl-button mdl-button--raised mdl-button--colored">
                                 {{ 'ok'|translate }}
                         </button>
                     </div>
