--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -241,8 +241,8 @@
                     <label for="create-game-points">{{ 'points'|translate }}</label>
                 </div>
                 <div class="app-modal__actions">
-                    <button modal-close type="reset" class="mdl-button mdl-button--raised close">{{ 'cancel'|translate }}</button>
-                    <button modal-close type="submit" class="mdl-button mdl-button--raised mdl-button--colored close">{{ 'ok'|translate }}</button>
+                    <button modal-close type="reset" class="mdl-button mdl-button--raised">{{ 'cancel'|translate }}</button>
+                    <button modal-close type="submit" class="mdl-button mdl-button--raised mdl-button--colored">{{ 'ok'|translate }}</button>
                 </div>
             </form>
         </div>
@@ -284,8 +284,8 @@
                     <label for="create-game-time">{{ 'time'|translate }}</label>
                 </div>
                 <div class="app-modal__actions">
-                    <button modal-close type="reset" class="mdl-button mdl-button--raised close">{{ 'cancel'|translate }}</button>
-                    <button modal-close type="submit" class="mdl-button mdl-button--raised mdl-button--colored close">{{ 'ok'|translate }}</button>
+                    <button modal-close type="reset" class="mdl-button mdl-button--raised">{{ 'cancel'|translate }}</button>
+                    <button modal-close type="submit" class="mdl-button mdl-button--raised mdl-button--colored">{{ 'ok'|translate }}</button>
                 </div>
             </form>
         </div>
