--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-<div class="mdl-cell mdl-cell--2-col mdl-cell--12-col-tablet">
+<div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet">
     <div class="app-game__notation app-element mdl-shadow--2dp">
         <div ng-repeat="notation in player1.notation track by $index">{{ notation }}</div>
     </div>
