--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,7 @@ a {
 }
 
 .app-navigation .mdl-navigation__link:hover {
-  border-bottom: 4px solid #8bc34a;
+  border-bottom: 4px solid #ff5252;
 }
  
 .app-drawer {
@@ -330,7 +330,7 @@ a {
   font-size: 40px;
   margin: 0;
   text-shadow: 0px 1px 1px rgba(0,0,0,.2);
-  color: rgb(139,195,74);
+  color: #795548;
 }
 
 .app-trophy__badge {
@@ -343,13 +343,17 @@ a {
   background-size: 75%;
   background-position: 50%;
   background-repeat: no-repeat;
-  background-color: #8bc34a;
+  background-color: #FF5252;
   border-radius: 100px;
   box-shadow: -0px 2px 5px 1px rgba(0, 0, 0, 0.7);
 }
 
 .app-trophy__badge--modal {
-  margin: 20px 10px;
+  margin: 20px 0;
+}
+
+.app-trophy__desc {
+  font-size: 24px;
 }
 
 .app-trophy__badge-unknown { background-image: url(../images/trophies/no-trophy.png); }
