--- a/public/app/trophies/templates/trophies.html
+++ b/public/app/trophies/templates/trophies.html
@@ -14,7 +14,7 @@
         <div class="app-modal__content app__text-center">
             <h3 class="app-trophy__title">{{ 'trophies.content.' + trophy.id + '.title' | translate }}</h3>
             <span class="app-trophy__badge app-trophy__badge--modal app-trophy__badge-{{ trophy.css }}"></span>
-            <p>{{ 'trophies.content.' + trophy.id + '.description' | translate }}</p>
+            <p class="app-trophy__desc">{{ 'trophies.content.' + trophy.id + '.description' | translate }}</p>
         </div>
     </div>
 </div>
