--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -4,6 +4,9 @@
      aria-hidden="true">
     <div class="app-modal__dialog">
         <div class="app-modal__content" ng-if="data">
+            <a href modal-close class="app-modal__close">
+                <i class="material-icons">clear</i>
+            </a>
             <div class="app-profile">
                 <div class="app__pull-left">
                     <img class="app-profile__image" src="//graph.facebook.com/{{ data.uid }}/picture">
