--- a/public/app/trophies/templates/trophies.html
+++ b/public/app/trophies/templates/trophies.html
@@ -12,6 +12,9 @@
      class="app-modal app-modal__bg" role="dialog" aria-hidden="true">
     <div class="app-modal__dialog">
         <div class="app-modal__content app__text-center">
+            <a href modal-close class="app-modal__close">
+                <i class="material-icons">clear</i>
+            </a>
             <h3 class="app-trophy__title">{{ 'trophies.content.' + trophy.id + '.title' | translate }}</h3>
             <span class="app-trophy__badge app-trophy__badge--modal app-trophy__badge-{{ trophy.css }}"></span>
             <p class="app-trophy__desc">{{ 'trophies.content.' + trophy.id + '.description' | translate }}</p>
