--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -1,4 +1,4 @@
-<div class="app-profile app-profile--game element">
+<div class="app-profile app-profile--game element" ng-class="{'app-profile--player': isPlayerUser()}">
     <div class="app__pull-right">
         <div class="app-game__time" ng-class="{'app-game__time--danger': player.time < 10}">
             {{ formatTime(player.time) }}
@@ -12,11 +12,11 @@
          ng-if="isPlayerUser() && !isFinish()">
         <button ng-disabled="!canOfferDraw()"
                 show-modal="modal-offer-draw" 
-                class="app__button--small app-game__action-button mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">
+                class="app-button app-button--phone app__button--small app-game__action-button mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">
             {{ 'offer_draw'|translate }}
         </button>
         <button show-modal="modal-resign" 
-                class="app__button--small app-game__action-button mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">
+                class="app-button app-button--phone app__button--small app-game__action-button mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">
             {{ 'resign'|translate }}
         </button>
 
