--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -206,7 +206,11 @@
     </div>
 </div>
 
-<div id="modal-create-game" class="app-modal app-modal__bg" role="dialog" aria-hidden="true">
+<div id="modal-create-game" 
+     class="app-modal app-modal__bg" 
+     role="dialog" 
+     aria-hidden="true"
+     modal-close-bg>
     <div class="app-modal__dialog">
         <div class="app-modal__content">
             <form ng-submit="createGame()" role="form">
@@ -249,7 +253,11 @@
     </div>
 </div>
 
-<div id="modal-challenger" class="app-modal app-modal__bg" role="dialog" aria-hidden="true">
+<div id="modal-challenger" 
+     class="app-modal app-modal__bg" 
+     role="dialog" 
+     aria-hidden="true"
+     modal-close-bg>
     <div class="app-modal__dialog">
         <div class="app-modal__content">
             <div class="app-profile app-profile--challenger">
