--- a/public/app/trophies/templates/trophies.html
+++ b/public/app/trophies/templates/trophies.html
@@ -9,7 +9,10 @@
 
 
 <div id="modal-challenger" 
-     class="app-modal app-modal__bg" role="dialog" aria-hidden="true">
+     class="app-modal app-modal__bg" 
+     role="dialog" 
+     aria-hidden="true"
+     modal-close-bg>
     <div class="app-modal__dialog">
         <div class="app-modal__content app__text-center">
             <a href modal-close class="app-modal__close">
