--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -34,7 +34,8 @@
 <div id="modal-response-draw" 
      class="app-modal app-modal__bg" 
      role="dialog" 
-     aria-hidden="true">
+     aria-hidden="true"
+     modal-close-bg>
     <div class="app-modal__dialog">
         <div class="app-modal__content">
             <h4 class="app-modal__title">{{ player2.name }} {{ 'offers_a_draw'|translate }} ?</h4>
@@ -58,7 +59,8 @@
 <div id="modal-finish-game" 
      class="app-modal app-modal__bg"
      role="dialog" 
-     aria-hidden="true">
+     aria-hidden="true"
+     modal-close-bg>
     <div class="app-modal__dialog">
         <div class="app-modal__content app__text-center">
             <a href modal-close class="app-modal__close">
