--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -23,7 +23,8 @@
         <div id="modal-offer-draw" 
              class="app-modal app-modal__bg" 
              role="dialog" 
-             aria-hidden="true">
+             aria-hidden="true"
+             modal-close-bg>
             <div class="app-modal__dialog">
                 <div class="app-modal__content">
                     <h4 class="app-modal__title">{{ 'offer_draw'|translate }} ?</h4>
@@ -47,7 +48,8 @@
         <div id="modal-resign" 
              class="app-modal app-modal__bg" 
              role="dialog" 
-             aria-hidden="true">
+             aria-hidden="true"
+             modal-close-bg>
             <div class="app-modal__dialog">
                 <div class="app-modal__content">
                     <h4 class="app-modal__title">{{ 'resign'|translate }} ?</h4>
