--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -9,7 +9,7 @@
             </a>
             <div class="app-profile">
                 <div class="app__pull-left">
-                    <img class="app-profile__image" src="//graph.facebook.com/{{ data.uid }}/picture">
+                    <img class="app-profile__image" ng-src="//graph.facebook.com/{{ data.uid }}/picture">
                 </div>
                 <div class="app-profile__name">
                     <a class="app-profile__name" href>{{ data.name }}</a>
